test/data/semantic-errors/assignment-to-constant-variable.jen
FOOD := '7'
FOOD = '3'
